Write docs for PNWG, standardize toStrings across a few classes, and some reformatting.